--- a/Ecommerce_Application/Views/Home/Index.cshtml
+++ b/Ecommerce_Application/Views/Home/Index.cshtml
@@ -11,20 +11,34 @@
     <title>Home</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            background-color: #FFF7DD;
+        }
+
+        .hide-scrollbar {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+
+            .hide-scrollbar::-webkit-scrollbar {
+                display: none;
+            }
+    </style>
 </head>
 <body>
-    @Html.Partial("_Header");
+    @Html.Partial("_Header")
     @*---- Carousel -----*@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/609ce8fd96fac92f.jpg?q=60" class="d-block w-100" alt="Promotion 1">
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/bf52a535c40485d8.jpeg?q=60" class="d-block w-100" alt="Promotion 2">
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/9c8b169a1c21ca88.jpeg?q=60" class="d-block w-100" alt="Promotion 3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -36,6 +50,20 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+    @*---- Carousel -----*@
+<div class="p-3">
+    <h2>Top Selling</h2>
+    <div class="mt-3">
+        <div class="w-100 overflow-auto hide-scrollbar" >
+            <div class="d-flex flex-nowrap gap-3">
+                @for (var i = 0; i <= 10; i++)
+                {
+                    @Html.Partial("_ProductCard")
+                }
+            </div>
+        </div>
+    </div>
+</div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
