--- a/Ecommerce_Application/Views/Home/Index.cshtml
+++ b/Ecommerce_Application/Views/Home/Index.cshtml
@@ -28,42 +28,44 @@
 </head>
 <body>
     @Html.Partial("_Header")
-    @*---- Carousel -----*@
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/609ce8fd96fac92f.jpg?q=60" class="d-block w-100" alt="Promotion 1">
+    <div style="margin-top: 70px">
+        @*---- Carousel -----*@
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/609ce8fd96fac92f.jpg?q=60" class="d-block w-100" alt="Promotion 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/bf52a535c40485d8.jpeg?q=60" class="d-block w-100" alt="Promotion 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/9c8b169a1c21ca88.jpeg?q=60" class="d-block w-100" alt="Promotion 3">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/bf52a535c40485d8.jpeg?q=60" class="d-block w-100" alt="Promotion 2">
-            </div>
-            <div class="carousel-item">
-                <img src="https://rukminim2.flixcart.com/fk-p-flap/3240/540/image/9c8b169a1c21ca88.jpeg?q=60" class="d-block w-100" alt="Promotion 3">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        @*---- Carousel -----*@
+        <div class="p-3">
+            <h2>Top Selling</h2>
+            <div class="mt-3">
+                <div class="w-100 overflow-auto hide-scrollbar">
+                    <div class="d-flex flex-nowrap gap-3">
+                        @for (var i = 0; i <= 10; i++)
+                        {
+                            @Html.Partial("_ProductCard")
+                        }
+                    </div>
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
-    @*---- Carousel -----*@
-<div class="p-3">
-    <h2>Top Selling</h2>
-    <div class="mt-3">
-        <div class="w-100 overflow-auto hide-scrollbar" >
-            <div class="d-flex flex-nowrap gap-3">
-                @for (var i = 0; i <= 10; i++)
-                {
-                    @Html.Partial("_ProductCard")
-                }
-            </div>
-        </div>
-    </div>
-</div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
