--- a/Ecommerce_Application/Views/Product/Category.cshtml
+++ b/Ecommerce_Application/Views/Product/Category.cshtml
@@ -11,10 +11,15 @@
     <title>Category</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        body {
+            background-color: #FFF7DD;
+        }
+    </style>
 </head>
 <body>
     @Html.Partial("_Header")
-    <div class="container p-3">
+    <div class="container p-3" style="margin-top: 70px">
         <h2>Electronics</h2>
         <div class="container mt-4">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
