--- a/Ecommerce_Application/Views/Cart/Index.cshtml
+++ b/Ecommerce_Application/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Ecommerce_Application.Models.CartModel>
 @{
     Layout = null;
 }
@@ -30,16 +30,22 @@
     </style>
 </head>
 <body>
-    @Html.Partial("_Header", ViewData);
+    <header>
+        <div id="dynamicHeaderContent">
+        </div>
+    </header>
     <div class="p-3" style="margin-top: 70px">
         <h3>My Cart</h3>
         <div class="mt-3 d-flex">
-            <div class="hide-scrollbar" style="width: 60%; height: 500px; overflow-y: auto">
-                @for (int i = 0; i < 10; i++)
+            <div id="cartContainer" class="hide-scrollbar" style="width: 60%; height: 500px; overflow-y: auto">
+                @if (Model.Count > 0)
                 {
-                    @Html.Partial("_ProductTile")
+                        @Html.Partial("_CartItems", Model)
                 }
-
+                else
+                {
+                    <h3>No items in the cart.</h3>
+                }
             </div>
             <div class="flex-grow-1 d-flex justify-content-center align-items-center">
                 <div class="rounded-4 d-flex justify-content-center align-items-center p-3" style="width: 60%; background-color: #91C4C3">
@@ -80,5 +86,13 @@
         </div>
     </div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.0.min.js"></script>
+    <script>
+      $(document).ready(function () {
+            $.get('@Url.Action("LoadHeader", "Home")', function (data) {
+            $('#dynamicHeaderContent').html(data);
+        });
+      });
+    </script>
 </body>
 </html>
