--- a/Ecommerce_Application/Views/Home/Index.cshtml
+++ b/Ecommerce_Application/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Ecommerce_Application.Models.ProductModel>
 @{
     Layout = null;
 }
@@ -27,7 +27,10 @@
     </style>
 </head>
 <body>
-    @Html.Partial("_Header")
+    <header>
+        <div id="dynamicHeaderContent">
+        </div>
+    </header>
     <div style="margin-top: 70px">
         @*---- Carousel -----*@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -57,15 +60,27 @@
             <div class="mt-3">
                 <div class="w-100 overflow-auto hide-scrollbar">
                     <div class="d-flex flex-nowrap gap-3">
-                        @for (var i = 0; i <= 10; i++)
+                        @if (Model != null)
                         {
-                            @Html.Partial("_ProductCard")
+                            foreach (var product in Model)
+                            {
+                                @Html.Partial("_ProductCard", product)
+                            }
                         }
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.0.min.js"></script>
+    <script>
+    $(document).ready(function () {
+        $.get('@Url.Action("LoadHeader", "Home")', function (data) {
+            $('#dynamicHeaderContent').html(data);
+        });
+    });
+    </script>
 </body>
 </html>
