--- a/Ecommerce_Application/Views/Product/Category.cshtml
+++ b/Ecommerce_Application/Views/Product/Category.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<Ecommerce_Application.Models.ProductModel>
 @{
     Layout = null;
 }
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Category</title>
+    <title>@ViewBag.Category</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -18,20 +18,31 @@
     </style>
 </head>
 <body>
-    @Html.Partial("_Header")
+    <header>
+        <div id="dynamicHeaderContent">
+        </div>
+    </header>
     <div class="container p-3" style="margin-top: 70px">
-        <h2>Electronics</h2>
+        <h2>@ViewBag.Category</h2>
         <div class="container mt-4">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-                @for (var i = 0; i <= 10; i++)
+                @foreach (var product in Model)
                 {
                     <div class="col">
-                        @Html.Partial("_ProductCard")
+                        @Html.Partial("_ProductCard", product)
                     </div>
                 }
             </div>
         </div>
     </div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.get('@Url.Action("LoadHeader", "Home")', function (data) {
+            $('#dynamicHeaderContent').html(data);
+        });
+    });
+    </script>
 </body>
 </html>
