--- a/Ecommerce_Application/Views/Product/Details.cshtml
+++ b/Ecommerce_Application/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Ecommerce_Application.Models.ProductModel
 @{
     Layout = null;
 }
@@ -18,33 +18,35 @@
     </style>
 </head>
 <body>
+    <header>
+        <div id="dynamicHeaderContent">
+        </div>
+    </header>
     <div class="d-flex justify-content-center align-items-center vh-100">
-        @Html.Partial("_Header")
         <div class="p-4 border bg-white shadow-sm d-flex rounded-3" style="width: 90%">
-            <img src="https://m.media-amazon.com/images/I/71dGLtr+1mL._SY695_.jpg" class="img-fluid" style="max-height: 500px"/>
+            <img src="@Model.imgUrl" class="img-fluid" style="max-height: 500px" />
             <div class="d-flex justify-content-center align-items-center flex-grow-1">
                 <table>
                     <tr>
                         <td>
-                            <h1>Reebook running shoe</h1>
-                            <h4>Reebook</h4>
+                            <h1>@Model.ProductName</h1>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <h3>₹ 1500</h3>
+                            <h3>₹ @Model.price</h3>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <div class="d-flex justify-content-evenly" style="width: 150px;height: 50px; color: white; font-size: 20px; font-weight: 600">
-                                <div class="d-flex justify-content-center align-items-center" style="width: 40px; font-size: 23px; height: 50px; background-color: #80A1BA; cursor: pointer">
+                                <div id="reduceBtn" class="d-flex justify-content-center align-items-center" style="width: 40px; font-size: 23px; height: 50px; background-color: #80A1BA; cursor: pointer">
                                     -
                                 </div>
-                                <div class="d-flex justify-content-center align-items-center" style="width: 40px; height: 50px; background-color: #80A1BA">
+                                <div id="productQuantity" class="d-flex justify-content-center align-items-center" style="width: 40px; height: 50px; background-color: #80A1BA">
                                     1
                                 </div>
-                                <div class="d-flex justify-content-center align-items-center" style="width: 40px; height: 50px; background-color: #80A1BA; cursor: pointer ">
+                                <div id="increaseBtn" class="d-flex justify-content-center align-items-center" style="width: 40px; height: 50px; background-color: #80A1BA; cursor: pointer ">
                                     +
                                 </div>
                             </div>
@@ -52,13 +54,104 @@
                     </tr>
                     <tr>
                         <td>
-                            <button class="btn mt-3" type="submit" style="background-color: #FFF7DD; color: black !important; font-weight: 600; font-size: 19px ">Add to Cart</button>
+                            <button id="addToCartBtn" class="btn mt-3" type="button" style="background-color: #FFF7DD; color: black !important; font-weight: 600; font-size: 19px ">Add to Cart</button>
                         </td>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
+    <div id="toastMsg" style="visibility: hidden" class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div class="toast show bg-danger text-white">
+            <div class="toast-header">
+                <strong class="me-auto">Item Stock Max</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+            </div>
+            <div class="toast-body">
+                Max Item Stock Reached
+            </div>
+        </div>
+    </div>
+
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            let productQuantity = 1;
+            let maxQuantity = @Model.quantity;
+
+            const quantityValue = $('#productQuantity').text().trim();
+            let currentValue = parseInt(quantityValue);
+
+            @if (ViewBag.ItemPresent != null) {
+                @:disableBtn();
+            }
+
+            $("#reduceBtn").click(() => {
+
+                if (currentValue > 1) {
+                    currentValue--;
+                    $('#toastMsg').css('visibility', 'hidden');
+                }
+
+                $('#productQuantity').text(currentValue);
+            })
+
+            $("#increaseBtn").click(() => {
+                if (currentValue < maxQuantity) {
+                    currentValue++;
+                } else {
+                    $('#toastMsg').css('visibility', 'visible');
+                }
+
+                $('#productQuantity').text(currentValue);
+            })
+
+            $('#addToCartBtn').click(() => {
+
+                const btn = $('#addToCartBtn');
+                const cart = {
+                    ProductID: @Model.ProductId,
+                    Quantity: currentValue,
+                    Price: @Model.price
+                };
+
+                btn.prop('disabled', true);
+                btn.text('Adding...');
+
+                $.ajax({
+                    url: '/Cart/AddToCart',
+                    type: 'POST',
+                    data: JSON.stringify(cart),
+                    contentType: 'application/json',
+                    success: function (response) {
+                        if (response.success) {
+                            disableBtn();
+                        } else {
+                            btn.prop('disabled', false);;
+                            btn.text('Add to Cart');
+                        }
+                    },
+                    error: function () {
+                        btn.prop('disabled', false);
+                        btn.text('Add to Cart');
+                    }
+                });
+            })
+
+            $.get('@Url.Action("LoadHeader", "Home")', function (data) {
+                $('#dynamicHeaderContent').html(data);
+            });
+
+            function disableBtn() {
+                const btn = $('#addToCartBtn');
+
+                btn.prop('disabled', true);
+                btn.text('Item in Cart');
+                btn.addClass('btn-secondary');
+            }
+    });
+    </script>
 </body>
 </html>
