--- a/Ecommerce_Application/Views/Shared/_ProductCard.cshtml
+++ b/Ecommerce_Application/Views/Shared/_ProductCard.cshtml
@@ -1,7 +1,10 @@
-﻿<div class="card flex-shrink-0" style="width: 10rem; cursor: pointer">
-    <img src="https://rukminim2.flixcart.com/image/240/240/xif0q/mobile/r/4/p/-original-imahf47e6gzt3ggw.jpeg?q=60" class="card-img-top" style="max-height: 150px;" alt="product_img">
-    <div class="card-body">
-        <p class="card-text">Product Name</p>
-        <p class="card-text">Price</p>
+﻿@model Ecommerce_Application.Models.ProductModel
+<a class="d-block text-decoration-none text-dark" href="@Url.Action("Details","Product", new {id = Model.ProductId})">
+    <div class="card flex-shrink-0" style="width: 10rem; cursor: pointer">
+        <img src="@Model.imgUrl" class="card-img-top" style="height: 150px;" alt="product_img">
+        <div class="card-body" style="min-height: 110px">
+            <h5 class="card-text">@Model.ProductName</h5>
+            <h6 class="card-text">₹ @Model.price</h6>
+        </div>
     </div>
-</div>
+</a>
