--- a/Ecommerce_Application/Views/Cart/Index.cshtml
+++ b/Ecommerce_Application/Views/Cart/Index.cshtml
@@ -3,9 +3,9 @@
     Layout = null;
 }
 
-@{
+@*@{
     ViewData["isCart"] = true;
-}
+}*@
 
 <!DOCTYPE html>
 
@@ -19,6 +19,7 @@
         body {
             background-color: #FFF7DD;
         }
+
         .hide-scrollbar {
             -ms-overflow-style: none;
             scrollbar-width: none;
@@ -36,60 +37,15 @@
     </header>
     <div class="p-3" style="margin-top: 70px">
         <h3>My Cart</h3>
-        <div class="mt-3 d-flex">
-            <div id="cartContainer" class="hide-scrollbar" style="width: 60%; height: 500px; overflow-y: auto">
-                @if (Model.Count > 0)
-                {
-                        @Html.Partial("_CartItems", Model)
-                }
-                else
-                {
-                    <h3>No items in the cart.</h3>
-                }
-            </div>
-            <div class="flex-grow-1 d-flex justify-content-center align-items-center">
-                <div class="rounded-4 d-flex justify-content-center align-items-center p-3" style="width: 60%; background-color: #91C4C3">
-                    <table style="border-collapse: separate; border-spacing: 10px 5px; width: 100%">
-                        <tr>
-                            <td>
-                                <h5>Cost: </h5>
-                            </td>
-                            <td>
-                                <h4>1750</h4>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h5>Delivery Charge: </h5>
-                            </td>
-                            <td>
-                                <h4>100</h4>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h5>Total: </h5>
-                            </td>
-                            <td>
-                                <h4>1850</h4>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>
-                                <button class="btn" type="submit" style="background-color: #FFF7DD; color: black !important ">Check Out</button>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+        <div id="cartContainer" class="mt-3 d-flex">
+                @Html.Partial("_CartItems", Model)
         </div>
     </div>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
     <script src="~/Scripts/jquery-3.7.0.min.js"></script>
     <script>
       $(document).ready(function () {
-            $.get('@Url.Action("LoadHeader", "Home")', function (data) {
+          $.get('@Url.Action("LoadHeader", "Home")', { isCart: true}, function (data) {
             $('#dynamicHeaderContent').html(data);
         });
       });
