--- a/Ecommerce_Application/Views/Profile/Index.cshtml
+++ b/Ecommerce_Application/Views/Profile/Index.cshtml
@@ -1,12 +1,7 @@
-﻿
+﻿@model Ecommerce_Application.Models.UserModel
 @{
     Layout = null;
 }
-
-@{
-    ViewData["isProfile"] = true;
-}
-
 
 <!DOCTYPE html>
 
@@ -23,24 +18,69 @@
     </style>
 </head>
 <body>
-    @Html.Partial("_Header", ViewData);
-    <div class="w-100 p-3" style="background-color: #91C4C3; height: 250px; margin-top: 45px;">
+    <header>
+        <div id="dynamicHeaderContent">
+        </div>
+    </header>
+    <div class="w-100 p-3" style="background-color: #91C4C3; height: 250px; margin-top: 70px;">
         <div class="h-100 ms-4 d-flex" style="width: 500px; ">
             <img src="https://www.shutterstock.com/image-vector/universal-blank-profile-picture-avatar-600nw-1654275940.jpg" alt="Circular Image" class="rounded-circle" style="width: 200px; height: 200px;" />
             <div class="d-flex flex-column justify-content-center p-3" style="width: 300px;">
-                <h2>Jeril</h2>
-                <h4>Jerilalbi@gmail.com</h4>
+                <h2>@Model.Name</h2>
+                <h4>@Model.Email</h4>
             </div>
         </div>
     </div>
     <div class="p-4">
-        <h3>Add Address:</h3>
-        <form>
-            <label>Address:</label>
-            <textarea class="form-control form-control-lg" rows="3" style="width: 500px;"></textarea>
-            <button class="btn mt-3" type="submit" style="background-color: #91C4C3 ">ADD</button>
-        </form>
+        @if (String.IsNullOrEmpty(Model.Address))
+        {
+            <h3>Add Address:</h3>
+            using (Html.BeginForm("UpdateAddress", "Profile", FormMethod.Post))
+            {
+                @Html.HiddenFor(m => m.UserId)
+                <label>Address:</label>
+                @Html.TextAreaFor(m => m.Address, new { @class = "form-control form-control-lg", @rows = "5", @style = "width: 500px;" });
+                @Html.ValidationMessageFor(m => m.Address, "", new { @stle = "color: red;" });
+                <button class="btn mt-3" type="submit" style="background-color: #91C4C3 ">Add</button>
+            }
+        }
+        else
+        {
+            <h3>Update Address:</h3>
+            using (Html.BeginForm("UpdateAddress", "Profile", FormMethod.Post))
+            {
+                @Html.HiddenFor(m => m.UserId)
+                <label>Address:</label>
+                @Html.TextAreaFor(m => m.Address, new { @class = "form-control form-control-lg", @rows = "5", @style = "width: 500px;" });
+                @Html.ValidationMessageFor(m => m.Address, "", new { @stle = "color: red;" });
+                <button class="btn mt-3" type="submit" style="background-color: #91C4C3 ">Update</button>
+            }
+        }
     </div>
+
+    @if (ViewBag.IsUpdated != null)
+    {
+        <div class="toast-container position-fixed bottom-0 end-0 p-3">
+            <div class="toast show bg-success text-white">
+                <div class="toast-header">
+                    <strong class="me-auto">Updated</strong>
+                    <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+                </div>
+                <div class="toast-body">
+                    User Address Updated
+                </div>
+            </div>
+        </div>
+    }
+
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/jquery-3.7.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $.get('@Url.Action("LoadHeader", "Home")', { isCart: false}, function (data) {
+            $('#dynamicHeaderContent').html(data);
+        });
+    });
+    </script>
 </body>
 </html>
