--- a/Ecommerce_Application/Views/Shared/_Header.cshtml
+++ b/Ecommerce_Application/Views/Shared/_Header.cshtml
@@ -1,9 +1,7 @@
 ﻿@model List<string>
 @{
     var isCartValue = ViewData["isCart"];
-    var isProfileValue = ViewData["isProfile"];
     bool isCart = (isCartValue is bool) ? (bool)isCartValue : false;
-    bool isProfile = (isProfileValue is bool) ? (bool)isProfileValue : false;
 }
 
 <header style="position: fixed; top: 0; width: 100%; z-index: 100">
@@ -44,23 +42,25 @@
                     </form>
                     <div id="searchSuggestions" class="list-group mt-1" style="position:absolute; z-index:1000; width:210px;"></div>
                 </div>
-                <form class="d-flex ms-5 align-items-center">
+                <form class="d-flex ms-4 me-5 px-2 justify-content-between align-items-center">
                     @if (!isCart)
                     {
                         <a class="d-block text-decoration-none" href="@Url.Action("Index","Cart")">
                             <i class="fa-solid fa-cart-shopping" style="font-size: 20px; color: white"></i>
                         </a>
                     }
-                    @if (isProfile)
-                    {
-                        <button class="btn" type="submit" style="background-color: #91C4C3 ">Log Out</button>
-                    }
-                    else
-                    {
-                        <button class="btn" type="submit">
-                            <i class="fa-solid fa-user" style="font-size: 20px; color: white"></i>
-                        </button>
-                    }
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link text-light active" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-user" style="font-size: 20px; color: white"></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a href="@Url.Action("Index","Profile")" class="dropdown-item">Profile</a></li>
+                                    <li><a class="dropdown-item">Orders</a></li>
+                                    <li><a class="dropdown-item">Log Out</a></li>
+                                </ul>
+                            </li>
+                        </ul>
 
                 </form>
             </div>
